# ymusic-downloader

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs
src/api/: auth.rs  client.rs  endpoints.rs  mod.rs  models.rs  sign.rs  urls.rs
src/app/: mod.rs  theme.rs
src/app/ui/: auth.rs  auth_screen.rs  main_screen.rs  mod.rs  project_screen.rs  queue.rs  settings.rs  splash.rs  widgets.rs
src/config/: mod.rs
src/download/: decrypt.rs  flac_mp4.rs  mod.rs  naming.rs  pipeline.rs  quality.rs  queue.rs
src/project/: mod.rs
src/tags/: flac_tag.rs  id3_tag.rs  mod.rs  mp4_tag.rs
